componentes principales y home

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,1 +1,40 @@
-<p>home works!</p>
+<section class="contenedor">
+    <div class="contenedor-items">
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+        <div class="item">
+            <app-card-pelicula></app-card-pelicula>
+        </div>
+    </div>
+</section>
