--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -3,10 +3,10 @@
             <a class="navbar-brand" href="#">                
                 Peliculas
               </a>
-              <a class="navbar-brand" href="#">                
+              <a class="navbar-brand" routerLink="SetPersona">                
                 Personas
               </a>
-              <a class="navbar-brand" href="#">                
+              <a class="navbar-brand"  routerLink="SetPersona">                
                 Reportes
               </a>
     </div>
