--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,3 +1,8 @@
+<div class="pull-right">
+    <button class="btn btn-primary float-left"  (click)="CrearGenero()">  Registrar Generos</button>
+</div>
+
+
 <section class="contenedor">
     <div class="contenedor-items">
         <div class="item">
