--- a/src/app/Components/Persona/get-all-personas/get-all-personas.component.html
+++ b/src/app/Components/Persona/get-all-personas/get-all-personas.component.html
@@ -1,1 +1,3 @@
-<p>get-all-personas works!</p>
+<div class="pull-right">
+    <button class="btn btn-primary float-right" [routerLink]="['/SetPersona']">  Registrar Personas</button>
+</div>
