--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -3,7 +3,7 @@
             <a class="navbar-brand" href="#">                
                 Peliculas
               </a>
-              <a class="navbar-brand" routerLink="SetPersona">                
+              <a class="navbar-brand" routerLink="GetAllPersona">                
                 Personas
               </a>
               <a class="navbar-brand"  routerLink="SetPersona">                
